public enum BOOKSTATUS {
    AVAILABLE, B0RROWED, RETURNED, RESERVED
}
