import java.util.ArrayList;
import java.util.List;

public class Library {
    private String libraryName = "SUDHARSANLIB";
    private String libraryAddress = "N0/1 Patinampakkam";
    private String libraryPho = "9344977852";

    public static List<Book> books = new ArrayList<>();
    public static List<Member> members = new ArrayList<>();
}
